# CentyHR

./: .gitignore  HANDOVER_CENTYPACK.md  README.md  REMOTE.md  package-lock.json
.github/workflows/: ci.yml  deploy-hr-staging-vps.yml
bff/: .env.example  .gitignore  CENTY_GUARD_EXCEPTION_REVIEW_DOCTYPE.md  ecosystem.config.cjs  package-lock.json  package.json  tsconfig.json
bff/docs/: DEPLOY_STEPS_1_2_3.md  ERP_TWO_STAGE_CUSTOM_FIELDS.md
bff/scripts/: install_two_stage_erpnext_fields.py  seed-test-hr-data.ts
bff/src/: .shift-assignment-days.json  .shift-holiday-settings.json  config.ts  server.ts  storage.ts  types.ts
bff/src/context/: resolveHrContext.ts
bff/src/erpnext/: client.ts  frappeResponse.ts
bff/supabase/: README.md
docs/: CENTYHR_BENCH_INSTALL_RUNBOOK.md  CENTYHR_KENYA_PAYROLL_HYBRID_INTEGRATION.md  DEPLOY-staging-centyhq.md  P0-recruitment-permissions-matrix.md
erpnext-custom-app/centy_company_guard/: README.md  pyproject.toml
erpnext-custom-app/centy_company_guard/centy_company_guard/: api.py  holidays.py  hooks.py  install.py
erpnext-custom-app/centy_company_guard/centy_company_guard/bsc/: __init__.py
erpnext-custom-app/centy_company_guard/centy_company_guard/events/: expense_claim.py
erpnext-custom-app/centypack/: MANIFEST.in  README.md  setup.py
frappe/: GIT_MERGE_CHECKLIST.txt
frappe/centy_guard_exception_review/: centy_guard_exception_review.json  centy_guard_exception_review.py
scripts/: centyhr-frappe-payroll-prereqs.sh  install-company-guard-docker.sh  onboard-tenant-company.sh  seed_country_payroll.py
(+112 files in other folders)
