[project]
name = "centy_company_guard"
version = "0.1.0"
description = "Enforce Company consistency on Expense Claim (tenant isolation)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "holidays>=0.46",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["centy_company_guard*"]
